# wire

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_wire_host.sh
.github/workflows/: ci.yml
host/: wire_crash.c  wire_host.c  wire_host.h  wire_rsp_client.c  wire_serial.c
include/: wire.h  wire_arch.h  wire_regs.h
src/: wire_exception.c  wire_regs_cm.c  wire_rsp.c
test/: wire_qemu_test.sh
test/qemu/: CMakeLists.txt  link.ld  main.c  startup.c  toolchain-arm.cmake
